# CBraMod-benchmark

./: .gitignore  .gitmodules  README.md  feature_classification.ipynb  finetune_main.py  lemon_dataset.py  lemon_dataset_test.py  lemon_feature_extractor.py  lemon_model.py  lemon_model_test.py  lemon_trainer.py  lemon_trainer_test.py  main.py  model_for_lemon_gender.py  pyproject.toml
notebooks/: Classification Pipline.ipynb  Feature Classification.ipynb  OTKA Data.ipynb
src/: gender_model.py  lemon_dataset.py  lemon_feature_extractor.py  lemon_trainer.py  otka_dataset.py  otka_features_extractor.py  otka_prepreocessing.py
tests/: test_dataset.py  test_lemon_model.py  test_lemon_trainer.py  test_model.py  test_trainer.py
